# EnglishAItutor

./: .env.example  .gitignore  README.md  app.py  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f9c0fbb3f5f_add_auth_hardening.py  4c4eccb15f85_initial_tables.py  7a2d8f3c1b9e_add_quiz_tables.py  9d4e5f6a7b8c_add_subscriptions_and_payments.py  c8f1a2b3d4e5_add_quiz_sets_and_password_reset.py
backend/app/: helper_api.py  main.py
backend/app/agents/english_tutor/: chat_widgets.py  edge_tts_plugin.py  entrypoint.py  graph.py  inline_quiz.py  models.py  prompts.py  session_metrics.py  whisper_stt.py
backend/app/agents/english_tutor/nodes/: assess.py  context.py  correct.py  respond.py  topic.py
backend/app/core/: auth.py  email.py  langgraph_adapter.py  llm.py  rate_limit.py  settings.py  subscriptions.py
backend/app/database/: connection.py  models.py  session_repo.py
backend/app/memory/: client.py
backend/app/router/: admin.py  auth.py  billing.py  quizzes.py  sessions.py  token.py
backend/app/schema/: models.py
backend/app/utils/: curated_quiz_sets.py  curated_skill_bank.py  seed_skill_bank.py
deploy/nginx/: livekit-sslip.conf  public-origin.conf
docs/: mvp-test-checklist.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  (+1 more)
templates/: index.html
tools/: build_academic_report.py  enhance_report_placeholders.py
(+39 files in other folders)
